Improved code readability